Create news and login page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<footer class="footer">footer works!</footer>
+<footer class="footer">
+  <p class="copyright">Copyright <a class="copyright-link" target="_blank" href="https://newsapi.org">NewsAPI</a></p>
+</footer>
