--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<header class="header">header works!</header>
+<header class="header">
+
+  <h1><a class="logo" routerLink="/">News Portal</a></h1>
+  <div class="log-in">
+    <a routerLink="/login" class="log-in__link">Log in</a>
+  </div>
+</header>
