--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,28 @@
-.header {
-  margin: 10px;
-  padding: 10px;
-  border: 2px solid green;
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 26px;
+  padding: 20px;
+}
+
+.logo {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+.log-in__link {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
+
+  &:hover {
+    background-color: white;
+    color: black;
+  }
 }
