--- a/src/app/log-in-page/log-in-page.component.html
+++ b/src/app/log-in-page/log-in-page.component.html
@@ -5,7 +5,7 @@
       <input id="username" name="username" type="text" placeholder="Enter username" class="log-in-form__username"/>
       <label for="password">Password</label>
       <input id="password" name="password" type="password" placeholder="Enter password" class="log-in-form__password"/>
-      <button class="log-in-form__btn">Log in</button>
+      <button type="button" class="log-in-form__btn" (click)="onClickLogInBtn()">Log in</button>
     </form>
   </div>
 </main>
