--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,7 @@
 <nav class="nav-wrapper" id="topNav">
-  <button class="menu-btn">
+  <button class="menu-btn" (click)="manageMobileNavigation()">
     <i class="ion-android-menu"></i>
   </button>
-
   <div class="dropdown" *ngFor="let sourceFirstLetter of alphabetArr">
     <p class="dropbtn">{{sourceFirstLetter}}</p>
     <div class="dropdown-content" id="{{sourceFirstLetter}}-sources">
