--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,7 +1,9 @@
 .nav-wrapper {
   position: relative;
   display: flex;
+  justify-content: center;
   margin-bottom: 20px;
+  background-color: #ecbc2e;
 }
 
 .menu-btn {
