--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -9,5 +9,5 @@
     <p class="news__item-description">{{articleData.description}}</p>
   </figcaption>
   <div class="hover"><i class="ion-android-open"></i></div>
-  <a class="news__item-link" href="{{articleData.url}}" target="_blank"></a>
+  <a class="news__item-link" routerLink="/article"></a>
 </figure>
