--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,11 @@
 <header class="header">
-
-  <h1><a class="logo" routerLink="/">News Portal</a></h1>
-  <div class="log-in">
-    <a routerLink="/login" class="log-in__link">Log in</a>
+  <div class="header--top">
+    <h1><a class="logo" routerLink="/">News Portal</a></h1>
+    <div class="log-in">
+      <a routerLink="/login" class="log-in__link">Log in</a>
+    </div>
+  </div>
+  <div class="header--sub">
+    <h2>Page title</h2>
   </div>
 </header>
