--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,7 +1,8 @@
 <main class="content">
   <div class="news">
-    <div *ngFor="let article of articles">
+    <div *ngFor="let article of showNewsArr">
       <app-news-item [articleData]="article"></app-news-item>
     </div>
   </div>
+  <app-load-more-btn *ngIf="showNewsArr.length < articles.length" (loadMore)="onLoadMore()"></app-load-more-btn>
 </main>
