--- a/src/app/add-edit-article-form/add-edit-article-form.component.scss
+++ b/src/app/add-edit-article-form/add-edit-article-form.component.scss
@@ -9,13 +9,22 @@
     flex-direction: column;
     padding: 40px;
 
+    &__label {
+      margin-top: 30px;
+    }
+
     &__input {
       background-color: transparent;
       border: 1px solid #ecbc2e;
       padding: 16px;
       font-size: 16px;
-      margin: 10px 0 30px;
+      margin: 10px 0;
       color: white;
+
+      &--invalid {
+        color: red;
+
+      }
 
       &--textarea {
         font-family: 'Open Sans', Arial, sans-serif;
@@ -37,6 +46,16 @@
       text-transform: uppercase;
       font-size: 16px;
       padding: 16px;
+      cursor: pointer;
+
+      &[disabled] {
+        background-color: #9d9898;
+        cursor: auto;
+
+        &:hover {
+          background-color: #9d9898;
+        }
+      }
 
       &:hover {
         background-color: #f6cc55;
