--- a/src/app/news-item/news-item.component.scss
+++ b/src/app/news-item/news-item.component.scss
@@ -58,6 +58,20 @@
     letter-spacing: -0.4px;
   }
 
+  &-btn {
+    margin: 10px;
+    background-color: #ecbc2e;
+    border: none;
+    color: white;
+    font-size: 12px;
+    padding: 12px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f6cc55;
+    }
+  }
+
   & .hover {
     position: absolute;
     top: 0;
